@@ -183,6 +183,9 @@
 /* Define if errno is not declared in system header files. */
 #undef NEED_DECLARATION_ERRNO
 
+/* Define if ffs is not declared in system header files. */
+#undef NEED_DECLARATION_FFS
+
 /* Define if free is not declared in system header files. */
 #undef NEED_DECLARATION_FREE
 
